[package]
name = "steel-interpreter"
version.workspace = true
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "Steel repl and command line interface"

[workspace.package]
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "steel"
path = "src/main.rs"

[workspace.dependencies]
# This has to line up with the workspace version above
steel-core = { path = "./crates/steel-core", version = "0.4.0", features = ["web", "sqlite", "blocking_requests", "dylibs", "markdown"] }

[dependencies]
once_cell = "1.17.0"
steel-core = { workspace = true } 
steel-derive = { path = "./crates/steel-derive", version = "0.2.0"}
steel-repl = { path = "./crates/steel-repl", version = "0.4.0" }
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "4.1.4", features = ["derive"] }
# dlopen = "0.1.8"
# dlopen_derive = "0.1.4"
steel-doc = { path = "./crates/steel-doc", version = "0.4.0"}

# [[bin]]
# name = "main"

[dev-dependencies]
# tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
# reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
# url = "2.3.1"
# serde_json = "1.0.92"

[workspace]
members = [
    ".",
    "crates/*",
]

[profile.release]
debug = false
lto = true
