[package]
name = "steel-interpreter"
version.workspace = true
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "Steel repl and command line interface"

include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]

[workspace.package]
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "steel"
path = "src/main.rs"

[workspace.dependencies]
# This has to line up with the workspace version above
steel-core = { path = "./crates/steel-core", version = "0.6.0", features = ["dylibs", "markdown", "stacker", "dylib-build"] }

[features]
interrupt = ["steel-core/interrupt", "steel-repl/interrupt"]

[dependencies]
once_cell = "1.17.0"
steel-core = { workspace = true }
steel-derive = { path = "./crates/steel-derive", version = "0.5.0"}
steel-repl = { path = "./crates/steel-repl", version = "0.6.0" }
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "=4.1.4", features = ["derive"] }
steel-doc = { path = "./crates/steel-doc", version = "0.6.0"}
cargo-steel-lib = { path = "./crates/cargo-steel-lib", version = "0.1.0" }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }

[workspace]
members = [
    ".",
    "crates/*",
    "libs/*",
]

[profile.release]
# debug = false
debug = true
lto = true
