[package]
name = "steel-interpreter"
version.workspace = true
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "Steel repl and command line interface"
default-run = "steel"

include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]

[workspace.package]
version = "0.6.0"

[[bin]]
name = "steel"
path = "src/main.rs"

[workspace.dependencies]
# This has to line up with the workspace version above
steel-core = { path = "./crates/steel-core", version = "0.6.0", features = ["dylibs", "markdown", "stacker", "sync", "rooted-instructions"] }

[features]
default = ["mimalloc"]
build-info = ["vergen"]
mimalloc = ["dep:mimalloc"]
# Note: It does not appear that this will get propagated to any crate that depends on
# the workspace feature. This is unfortunate, since we'd like everything to actually
# use the workspace dependency. For now, if you want to test with sync, you should
# just add the sync flag directly.
# default = ["sync"]
# sync = ["steel-core/sync"]

[dependencies]
once_cell = "1.17.0"
steel-core = { workspace = true }
steel-derive = { path = "./crates/steel-derive", version = "0.5.0" }
steel-repl = { path = "./crates/steel-repl", version = "0.6.0" }
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "=4.1.4", features = ["derive"] }
steel-doc = { path = "./crates/steel-doc", version = "0.6.0" }
mimalloc = { version = "0.1.43", optional = true }

[target.'cfg(not(target_os = "redox"))'.dependencies]
cargo-steel-lib = { path = "./crates/cargo-steel-lib", version = "0.1.0" }


[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }

[workspace]
members = [
    ".",
    "crates/*", 
    "libs/*",
]

[profile.release]
debug = true
lto = true

[profile.test]
opt-level = 2

[build-dependencies]
vergen = { version = "9.0.0", features = [ "build", "cargo", "rustc" ], optional = true}
