[package]
name = "steel"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
im-rc = "14.3.0"
colored = "1.9"
rand = "0.7.3"
codespan-reporting = "0.9.4"
structopt = "0.3.15"
unindent = "0.1"
logos = "0.11.4"
# generational-arena = "0.2"
itertools = "0.9"
log = "0.4"
futures = "0.3"
# reqwest = { version = "0.10", features = ["json"] }
async-compat = "0.1.3"
serde_json = "1.0"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[features]
# this effectively enable the feature `no-color` of colored when testing with
# `cargo test --features colors_off`
colors_off = ["colored/no-color"]
