[package]
name = "steel"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.23"
im-rc = "15.0.0"
colored = "2.0.0"
rand = "0.8.1"
codespan-reporting = "0.11.0"
structopt = "0.3.21"
unindent = "0.1.7"
logos = "0.11.4"
# generational-arena = "0.2"
itertools = "0.10.0"
log = "0.4.11"
futures = "0.3.9"
# reqwest = { version = "0.10", features = ["json"] }
async-compat = "0.1.4"
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
bincode = "1.3.1"
ahash = "0.6.3"

[dev-dependencies]
proptest = "0.10.1"

[features]
# this effectively enable the feature `no-color` of colored when testing with
# `cargo test --features colors_off`
colors_off = ["colored/no-color"]
