[package]
name = "steel_repl"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.2.0"
rustyline-derive = "0.2.0"
colored = "1.9"
steel = { path = "../steel" }
