[package]
name = "steel_repl"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
colored = "2.0"
steel = { path = "../steel", features = ["modules", "jit"] }
tokio = { version = "1.3.0", features = ["signal", "rt-multi-thread"] }
futures = "0.3.13"
once_cell = "1.5.2"