[package]
name = "cargo-steel-lib"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mattwparas/steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.3"
env_home = "0.1.0"

# Keeps the MSRV at v1.70.0
cargo-platform = "=0.1.7"
xdg = "3.0.0"
