[package]
name = "cargo-steel-lib"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mattwparas/steel"
license = "MIT OR Apache-2.0"
description = "Cargo plugin to build dylib for steel"

[features]
default = ["std"]
std = [
    "dep:cargo_metadata",
    "dep:env_home",
    "dep:xdg",
    "dep:cargo-platform",
]

[dependencies]
cargo_metadata = { version = "0.20.0", optional = true }
env_home = { version = "0.1.0", optional = true }

# Keeps the MSRV at v1.70.0
cargo-platform = { version = "=0.1.7", optional = true }
xdg = { version = "3.0.0", optional = true }

[[bin]]
name = "cargo-steel-lib"
path = "src/main.rs"
required-features = ["std"]
