[package]
name = "cargo-steel-lib"
version.workspace = true
edition = "2021"
repository = "https://github.com/mattwparas/steel"
license = "MIT OR Apache-2.0"
description = "Cargo plugin to build dylib for steel"

[dependencies]
cargo_metadata = "0.20.0"
env_home = "0.1.0"

# Keeps the MSRV at v1.70.0
cargo-platform = "=0.1.7"
xdg = "3.0.0"
