[package]
name = "example-dylib"
version = "0.2.0"
edition = "2021"

[lib]
name = "example_dylib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { path = "../steel-core", version = "0.2.0", features = ["modules"] }
