[package]
name = "steel-forge"
edition = "2021"
version = "0.8.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "Package manager for steel"
default-run = "forge"
include = ["build.rs", "Cargo.toml", "src/main.rs", "installer/*"]

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# TODO: Don't use the workspace, instead explicitly
# depend on the version with the git dependency
steel-core = { path = "../steel-core", version = "0.8.0", features = ["dylibs", "stacker", "sync", "git", "ureq"] }

[build-dependencies]
steel-core = { path = "../steel-core", version = "0.8.0", features = ["dylibs", "stacker", "sync", "git", "ureq"] }

[features]
default = ["dylib-build"]
dylib-build = ["steel-core/dylib-build"]
