[package]
name = "steel-derive"
version = "0.2.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.51"
