[package]
name = "steel-doc"
version = "0.3.0"
edition = "2021"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "Document generation for steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { path = "../steel-core", version = "0.3.0", features = ["modules"] }