[package]
name = "steel-doc"
version.workspace = true
edition = "2021"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "Document generation for steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { path = "../steel-core", version = "0.7.0", features = [
  "dylibs",
  "markdown",
  "sync",
  "rooted-instructions",
  "imbl",
  "biased"
] }

[package.metadata.dist]
dist = false
