[package]
name = "steel-gen"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
repository = "https://github.com/mattwparas/steel"
description = "Code generation crates for use within steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { version = "0.2.0", optional = true }
serde = { version = "1.0.152", default-features = false, features = ["alloc", "derive"] }

[features]
default = ["std", "codegen"]
std = []
codegen = ["std", "dep:codegen"]
no_std = []
