[package]
name = "steel-language-server"
edition = "2021"
version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "Steel language server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ropey = "1.5.0"
serde_json = "1.0.92"
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = { version = "0.20.0" }
serde = { version = "1.0.152", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.17"
steel-core = { path = "../steel-core", version = "0.8.2", features = ["dylibs", "stacker", "sync", "anyhow"] }
steel-parser = { path = "../steel-parser", version = "0.8.2" }
once_cell = "1.18.0"
crossbeam-utils = "0.8.21"
ignore = "0.4.23"
