[package]
name = "steel-markdown"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "steel_markdown"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-core = { workspace = true }
pulldown-cmark = "0.9.3"
abi_stable = "0.11.1"
