[package]
name = "steel-parser"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
repository = "https://github.com/mattwparas/steel"
description = "Parser for use within steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "lasso/multi-threaded",
    "lasso/serialize",
    "lasso/inline-more",
    "once_cell/std",
    "compact_str/std",
    "serde/rc",
    "dep:pretty",
]
no_std = ["lasso/no-std", "lasso/inline-more", "lasso/ahasher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lasso = { version = "0.7.3", default-features = false }
num-rational = { version = "0.4.2", default-features = false, features = ["serde", "num-bigint"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
num-bigint = { version = "0.4.6", default-features = false, features = ["serde"] }
once_cell = { version = "1.18.0", default-features = false, features = ["alloc", "critical-section"] }
pretty = { version = "0.12.1", optional = true }
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc", "rc"] }
smallvec = { version = "1.13", default-features = false }
compact_str = { version = "0.8.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4" # Only used by unit tests.
