[package]
name = "steel-parser"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
repository = "https://github.com/mattwparas/steel"
description = "Parser for use within steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
lasso = { version = "0.7.3", features = ["multi-threaded", "ahash", "serialize", "inline-more"] }
num-rational = "0.4.2"
num-traits = "0.2.19"
num-bigint = { version = "0.4.6", features = ["serde"] }
once_cell = "1.18.0"
pretty = "0.12.1"
serde = { version = "1.0.152", features = ["derive", "rc"] }
smallvec = "1.13"
compact_str = "0.8.0"

[features]
default = ["std"]
std = []

[dev-dependencies]
pretty_assertions = "1.4" # Only used by unit tests.
