[package]
name = "steel-repl"
version.workspace = true
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "REPL library for steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.1.1"
rustyline-derive = "0.7.0"
colored = "2.0.0"
steel-core = { workspace = true }
steel-parser = { path = "../steel-parser", version = "0.4.0"}