[package]
name = "steel-repl"
version.workspace = true
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/steel"
description = "REPL library for steel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "14.0.0", default-features = false, features = ["with-dirs", "with-file-history", "derive"] }
steel-core = { workspace = true }
steel-parser = { path = "../steel-parser", version = "0.6.0"}
home = "0.5.9"
ctrlc = "3.4.4"
crossbeam = "0.8.4"
owo-colors = "4.2.0"

[features]
interrupt = ["steel-core/interrupt"]
